--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -218,6 +218,8 @@ html,body
 }
 .leaderBoardInfo__firstBlock{
   display: flex;
+  width: 70%;
+  max-width: 70%;
 }
 .leaderBoardInfo__playerInfo{
   display: flex;
@@ -235,21 +237,25 @@ html,body
 
   border-bottom: 1px solid #EFEFEF;
 }
+@media (orientation: portrait){
+  .leaderBoardInfo__playerInfo{
+    width: 97%;
+  }
+}
 .leaderBoardInfo__player{
   display: flex;
   justify-content: space-between;
   align-items: center;
   //border: 2px solid #a15eb9;
-  height: 66px;
+  height: 70px;
 
   margin-bottom: 10px;
 }
 .leaderBoardInfo__image{
   width: 50px;
   height: 50px;
-  margin-right: 8px;
 
-  border: 1.5px solid #B8B8B8;
+  border: 1px solid #B8B8B8;
 
   border-radius: 50%;
 
@@ -329,8 +335,11 @@ html,body
   margin: 2px 0 0 0;
 }
 .leaderBoardInfo_big, .leaderBoardInfo_big .leaderBoardInfo__rankInner{
-  width: 87px;
+  width: 67px;
   border-radius: 100px;
+}
+.leaderBoardInfo__rankInner_bigRank{
+  font-size: 1.45rem;
 }
 .leaderBoardInfo__name{
   margin-right: auto;
@@ -342,6 +351,7 @@ html,body
   font-weight: 600;
   color: black;
 
+  width: 100%;
 }
 .leaderBoardInfo__nameAndScore{
   display: flex;
@@ -349,6 +359,9 @@ html,body
   justify-content: space-between;
   align-items: start;
   margin-left: 10px;
+
+  flex: 1 1 50%;
+  width: 50%;
 }
 
 .rules{
@@ -2680,8 +2693,11 @@ b{
   .leaderBoardInfo_3 .leaderBoardInfo__rankInner{
     font-size: 2.7rem;
   }
-  .leaderBoardInfo_big{
+  .leaderBoardInfo_big, .leaderBoardInfo_big .leaderBoardInfo__rankInner{
     width: 100px;
+  }
+  .leaderBoardInfo__rankInner_bigRank{
+    font-size: 1.65rem;
   }
 }
 .pageNumInput{
@@ -3109,6 +3125,8 @@ b{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50%;
 }
 .noAdvert__advertCircle{
   width: 100% !important;
