--- a/src/styles/stylesHalloween.css
+++ b/src/styles/stylesHalloween.css
@@ -13,14 +13,14 @@
   fill: #103A4C;
 }
 .chosenAppBg-1 .shop__cart__card .svgIcon {
-  fill: #4AD7AD;
+  fill: #3C9BA8;
 }
 .chosenAppBg-1 .shop__cart__card .shop__cart__name {
-  color: #4AD7AD;
+  color: #3C9BA8;
 }
 .chosenAppBg-1 .shop__cart__buy-button {
-  background: linear-gradient(264.82deg, #08F2C8 2.88%, #27D18A 96.18%);
-  box-shadow: 0px 3px 0px #0E9266;
+  background: linear-gradient(264.82deg, #3C9BA8 2.88%, #103A4D 96.18%);
+  box-shadow: 0px 3px 0px #103A4D;
 }
 .chosenAppBg-1 .levelsTop__allStars {
   color: #103A4D;
@@ -90,6 +90,24 @@
 }
 .chosenAppBg-1 .leaderBoardInfo__player, .chosenAppBg-1 .lbInGame__player, .chosenAppBg-1 .lbInGame__score {
   border-color: #3C9BA8;
+}
+.chosenAppBg-1 .endGame__header, .chosenAppBg-1 .endGame__nextLevel {
+  background: linear-gradient(264.82deg, #3C9BA8 2.88%, #103A4D 96.18%);
+}
+.chosenAppBg-1 .endGame__firstPrize {
+  fill: #103A4D;
+}
+.chosenAppBg-1 .endGame__secondPrize {
+  fill: #3C9BA8;
+}
+.chosenAppBg-1 .endGame__menu {
+  border-color: #103A4D;
+}
+.chosenAppBg-1 .endGame__firstStop {
+  stop-color: #3C9BA8;
+}
+.chosenAppBg-1 .endGame__secondStop {
+  stop-color: #103A4D;
 }
 @media (orientation: portrait) {
   .chosenAppBg-1 .shop__cart__buy-button {
