--- a/src/styles/stylesSpring.css
+++ b/src/styles/stylesSpring.css
@@ -92,6 +92,24 @@
 .chosenAppBg-3 .leaderBoardInfo__player {
   border-color: #6C72F0;
 }
+.chosenAppBg-3 .endGame__header, .chosenAppBg-3 .endGame__nextLevel {
+  background: linear-gradient(264.82deg, #712EFF 2.88%, #217AFF 96.18%);
+}
+.chosenAppBg-3 .endGame__firstPrize {
+  fill: #712EFF;
+}
+.chosenAppBg-3 .endGame__secondPrize {
+  fill: #217AFF;
+}
+.chosenAppBg-3 .endGame__menu {
+  border-color: #217AFF;
+}
+.chosenAppBg-3 .endGame__firstStop {
+  stop-color: #712EFF;
+}
+.chosenAppBg-3 .endGame__secondStop {
+  stop-color: #217AFF;
+}
 @media (orientation: portrait) {
   .chosenAppBg-3 .shop__cart__buy-button {
     background-color: #3A307D;
