--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -719,7 +719,7 @@ html, body {
 .menu__button-back:after, .menu__tip:after,
 .prev-location:after, .next-location:after, .switchSettings:after,
 .popUp__close:after, .switchShowLocation:after, .switchShop:after,
-.action-block__button-send:after {
+.action-block__button-send:after, .endGame__menu:after {
   position: absolute;
   content: "";
   top: -10px;
@@ -1957,6 +1957,10 @@ b {
 
 .chosenBg4 {
   background-image: url(../assets/settings/bg4.png);
+}
+
+.chosenBg5 {
+  background-image: url(../assets/settings/bg5.png);
 }
 
 .changeLeft, .changeRight {
