--- a/src/styles/stylesBg1.scss
+++ b/src/styles/stylesBg1.scss
@@ -90,6 +90,28 @@
     border-color: #bd550c;
   }
 
+  .endGame__header{
+    background: linear-gradient(265.01deg, #FF8862 6.23%, #FF1F00 97.6%);
+  }
+  .endGame__firstPrize{
+    fill: #FF8762;
+  }
+  .endGame__secondPrize{
+    fill: #FF2001;
+  }
+  .endGame__menu{
+    border-color: rgba(255, 31, 0, 1);
+  }
+  .endGame__firstStop{
+    stop-color: rgba(255, 136, 98, 1);
+  }
+  .endGame__secondStop{
+    stop-color: rgba(255, 31, 0, 1);
+  }
+  .endGame__nextLevel{
+    background: linear-gradient(265.01deg, #FF8862 6.23%, #FF1F00 97.6%);
+  }
+
 
   @media (orientation: portrait){
     .shop__cart__buy-button{
