--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -10,6 +10,7 @@
 @import 'farm';
 @import 'halloween';
 @import 'valentines';
+@import 'games';
 
 .locationOpened{
     overflow: auto !important;
