--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1715,8 +1715,9 @@ html,body
   font-size: 2rem;
   display: flex;
   flex-flow: column nowrap;
-  min-height: 300px;
+  min-height: auto !important;
   padding-bottom: 15px;
+  max-height: 85%;
 
 }
 
