--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -204,6 +204,7 @@
 }
 .smallText{
   font-size: 1.2rem;
+  margin-top: 10px;
 }
 .infoAboutCopy{
   display: none;
@@ -220,7 +221,8 @@
   bottom: 20px;
   z-index: 1000;
 }
-.eventRules .rules__goBg, .eventLocationText .rules__goBg,
+/*.eventRules .rules__goBg,*/
+ .eventLocationText .rules__goBg,
 .gameLocationWrapper-event .rules__goBg{
   background-color: #F54A5E !important
 }
