--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2886,7 +2886,7 @@ b{
 
   width: 100%;
   height: 100%;
-  background: url(../assets/iconGames.png) center center no-repeat;
+  background: url(../assets/sq.png) center center no-repeat;
   //border-radius: 50%;
   background-size: 100%;
 }
@@ -3076,7 +3076,8 @@ b{
   margin: 0 0 10px 0;
 }
 .eventRules .rules__goBg{
-  background-color: #c05251 !important;
+  //background-color: #c05251 !important;
+  width: 300px;
 }
 .levelClosedText h2, .levelClosedText p{
   text-align: center;
@@ -3094,7 +3095,7 @@ b{
 .eventDivWithMargins{
   margin: 10px 0;
 }
-.promoCode, .mailPrize{
+.promoCode, .mailPrize, .updateText{
   user-select: text;
 }
 
@@ -3456,4 +3457,11 @@ b{
   .level {
     margin: 0 6px 22px 6px !important;
   }
+}
+
+.plusLink{
+  color: #3f68f9;
+}
+.button__promoCode{
+  margin: 10px auto !important;
 }
